<resources>
    <string name="app_name">calculaterConverter</string>
    <string name="equal">=</string>
    <string name="result">0</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="clearAll">AC</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="to">to</string>
    <string name="from">from</string>
    <string name="dec">Dec</string>
    <string name="bin">Bin</string>
    <string name="oct">Oct</string>
    <string name="hix">Hix</string>
    <string name="binary">Binary</string>
    <string name="hexa">Hexa</string>
</resources>