<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/space16">


<!--    <TextView-->
<!--        android:id="@+id/fromText"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/from"-->
<!--        android:textSize="14sp"-->

<!--        app:layout_constraintBottom_toBottomOf="@id/radioGroupFrom"-->
<!--        app:layout_constraintEnd_toStartOf="@id/radioGroupFrom"-->


<!--        app:layout_constraintTop_toTopOf="@+id/radioGroupFrom"-->
<!--        app:layout_constraintVertical_bias="1.0" />-->

<!--    <RadioGroup-->
<!--        android:id="@+id/radioGroupFrom"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_margin="@dimen/space20"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:paddingStart="8dp"-->
<!--        android:gravity="center"-->
<!--        android:orientation="horizontal"-->
<!--        app:layout_constraintEnd_toEndOf="@+id/radioGroupTo"-->
<!--        app:layout_constraintStart_toStartOf="@+id/radioGroupTo"-->
<!--        app:layout_constraintTop_toBottomOf="@id/textView">-->

<!--        <RadioButton-->
<!--            android:id="@+id/from_radio_decimal"-->
<!--            style="@style/radioBtn"-->
<!--            android:layout_marginEnd="2dp"-->
<!--            android:text="@string/dec" />-->

<!--        <RadioButton-->
<!--            android:id="@+id/from_radio_binary"-->
<!--            style="@style/radioBtn"-->
<!--            android:layout_marginEnd="2dp"-->
<!--            android:text="@string/bin" />-->

<!--        <RadioButton-->
<!--            android:id="@+id/from_radio_octal"-->
<!--            style="@style/radioBtn"-->
<!--            android:layout_marginEnd="2dp"-->
<!--            android:text="@string/oct" />-->

<!--        <RadioButton-->
<!--            android:id="@+id/from_radio_hexadecimal"-->
<!--            style="@style/radioBtn"-->
<!--            android:layout_marginEnd="2dp"-->
<!--            android:text="@string/hix" />-->
<!--    </RadioGroup>-->

<!--    <TextView-->
<!--        android:id="@+id/toText"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="16dp"-->
<!--        android:layout_marginTop="0dp"-->
<!--        android:paddingStart="16dp"-->
<!--        android:text="@string/to"-->
<!--        android:textSize="14sp"-->
<!--        app:layout_constraintBottom_toBottomOf="@id/radioGroupTo"-->
<!--        app:layout_constraintEnd_toStartOf="@id/radioGroupTo"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/radioGroupFrom" />-->

<!--    <RadioGroup-->
<!--        android:id="@+id/radioGroupTo"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:gravity="center"-->
<!--        android:orientation="horizontal"-->
<!--        android:paddingBottom="4dp"-->
<!--        android:paddingStart="8dp"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/btn0"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toEndOf="@id/toText"-->
<!--        app:layout_constraintTop_toBottomOf="@id/radioGroupFrom">-->

<!--        <RadioButton-->
<!--            android:id="@+id/disTo"-->
<!--            style="@style/radioBtn"-->
<!--            android:layout_marginEnd="2dp"-->
<!--            android:text="@string/dec" />-->

<!--        <RadioButton-->
<!--            android:id="@+id/binaryTo"-->
<!--            style="@style/radioBtn"-->
<!--            android:layout_marginEnd="2dp"-->
<!--            android:text="@string/bin" />-->

<!--        <RadioButton-->
<!--            android:id="@+id/octTo"-->
<!--            style="@style/radioBtn"-->
<!--            android:layout_marginEnd="2dp"-->
<!--            android:text="@string/oct" />-->

<!--        <RadioButton-->
<!--            android:id="@+id/hexTo"-->
<!--            style="@style/radioBtn"-->
<!--            android:text="@string/hix" />-->
<!--    </RadioGroup>-->

    <TextView
        android:id="@+id/txtBin"
        style="@style/btnStyle"
        android:layout_marginTop="24dp"
        android:clickable="true"
        android:onClick="inputType"
        android:textSize="16dp"
        android:text="@string/binary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/viewConvertBin"
        style="@style/btnStyle"
        android:layout_marginStart="٠dp"
        app:layout_constraintBottom_toBottomOf="@id/txtBin"
        app:layout_constraintStart_toEndOf="@+id/txtBin"
        app:layout_constraintTop_toTopOf="@+id/txtBin"
        app:layout_constraintVertical_bias="1" />

    <TextView
        android:id="@+id/txtOct"
        style="@style/btnStyle"
        android:layout_marginStart="0dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:onClick="inputType"
        android:text="Octal"
        app:layout_constraintEnd_toEndOf="@+id/txtBin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtBin" />

    <TextView
        android:id="@+id/viewConvertOct"
        style="@style/btnStyle"
        app:layout_constraintStart_toEndOf="@id/txtOct"
        app:layout_constraintTop_toBottomOf="@id/viewConvertBin"
        app:layout_constraintBottom_toBottomOf="@id/txtOct"/>

    <TextView
        android:id="@+id/txtDis"
        style="@style/btnStyle"
        android:clickable="true"
        android:onClick="inputType"
        android:text="Dismal"
        app:layout_constraintEnd_toEndOf="@+id/txtOct"
        app:layout_constraintStart_toStartOf="@id/txtOct"
        app:layout_constraintTop_toBottomOf="@id/txtOct" />

    <TextView
        android:id="@+id/viewConvertDis"
        style="@style/btnStyle"
        app:layout_constraintStart_toEndOf="@id/txtDis"
        app:layout_constraintTop_toBottomOf="@id/viewConvertOct"
        app:layout_constraintBottom_toBottomOf="@id/txtDis"/>

    <TextView
        android:id="@+id/txtHex"
        style="@style/btnStyle"
        android:layout_marginStart="٠dp"
        android:clickable="true"
        android:onClick="inputType"
        android:text="@string/hexa"
        app:layout_constraintEnd_toEndOf="@+id/txtDis"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtDis" />

    <TextView
        android:id="@+id/viewConvertHex"
        style="@style/btnStyle"
        app:layout_constraintStart_toEndOf="@id/txtHex"
        app:layout_constraintTop_toBottomOf="@id/viewConvertDis"
        app:layout_constraintBottom_toBottomOf="@id/txtHex"/>

    <TextView
        android:id="@+id/input"
        style="@style/textView"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@id/viewConvertHex"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn0"
        style="@style/calculator_button"
        android:layout_marginTop="0dp"
        android:background="@drawable/backgrounf_button_gray"
        android:text="@string/zero"
        android:onClick="onClickNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn3"
        app:layout_constraintTop_toTopOf="@+id/btn1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn1"
        style="@style/calculator_button"
        android:background="@drawable/backgrounf_button_gray"
        android:text="@string/one"
        android:onClick="onClickNumber"
        app:layout_constraintEnd_toStartOf="@+id/btn2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input"
        android:focusable="true" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn2"
        style="@style/calculator_button"
        android:layout_marginTop="0dp"
        android:background="@drawable/backgrounf_button_gray"
        android:text="@string/two"
        android:onClick="onClickNumber"
        app:layout_constraintEnd_toStartOf="@+id/btn3"
        app:layout_constraintStart_toEndOf="@+id/btn1"
        app:layout_constraintTop_toTopOf="@+id/btn1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn3"
        style="@style/calculator_button"
        android:layout_marginTop="0dp"
        android:onClick="onClickNumber"
        android:background="@drawable/backgrounf_button_gray"
        android:text="@string/three"
        app:layout_constraintEnd_toStartOf="@+id/btn0"
        app:layout_constraintStart_toEndOf="@+id/btn2"
        app:layout_constraintTop_toTopOf="@+id/btn1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn4"
        style="@style/calculator_button"
        android:background="@drawable/backgrounf_button_gray"
        android:text="@string/four"
        android:onClick="onClickNumber"
        app:layout_constraintEnd_toEndOf="@+id/btn1"
        app:layout_constraintStart_toStartOf="@+id/btn1"
        app:layout_constraintTop_toBottomOf="@+id/btn1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn5"
        style="@style/calculator_button"
        android:background="@drawable/backgrounf_button_gray"
        android:text="@string/five"
        android:onClick="onClickNumber"
        app:layout_constraintEnd_toEndOf="@+id/btn2"
        app:layout_constraintStart_toStartOf="@+id/btn2"
        app:layout_constraintTop_toBottomOf="@+id/btn2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn6"
        style="@style/calculator_button"
        android:background="@drawable/backgrounf_button_gray"
        android:text="@string/six"
        android:onClick="onClickNumber"
        app:layout_constraintEnd_toEndOf="@+id/btn3"
        app:layout_constraintStart_toStartOf="@+id/btn3"
        app:layout_constraintTop_toBottomOf="@+id/btn3" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/appCompatButton11"
        style="@style/calculator_button"
        android:background="@drawable/background_button_blue"
        android:gravity="center"
        android:src="@drawable/vector"
        app:layout_constraintEnd_toEndOf="@+id/btn0"
        app:layout_constraintStart_toStartOf="@+id/btn0"
        app:layout_constraintTop_toBottomOf="@+id/btn0"
        tools:ignore="SpeakableTextPresentCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn7"
        style="@style/calculator_button"
        android:background="@drawable/backgrounf_button_gray"
        android:text="@string/seven"
        android:onClick="onClickNumber"
        app:layout_constraintEnd_toEndOf="@+id/btn4"
        app:layout_constraintStart_toStartOf="@+id/btn4"
        app:layout_constraintTop_toBottomOf="@+id/btn4" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn8"
        style="@style/calculator_button"
        android:background="@drawable/backgrounf_button_gray"
        android:text="@string/eight"
        android:onClick="onClickNumber"
        app:layout_constraintEnd_toEndOf="@+id/btn5"
        app:layout_constraintStart_toStartOf="@+id/btn5"
        app:layout_constraintTop_toBottomOf="@+id/btn5" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn9"
        style="@style/calculator_button"
        android:background="@drawable/backgrounf_button_gray"
        android:text="@string/nine"
        android:onClick="onClickNumber"
        app:layout_constraintEnd_toEndOf="@+id/btn6"
        app:layout_constraintStart_toStartOf="@+id/btn6"
        app:layout_constraintTop_toBottomOf="@+id/btn6" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAc"
        style="@style/calculator_button"
        android:background="@drawable/background_button_blue"
        android:text="@string/clearAll"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/appCompatButton11"
        app:layout_constraintStart_toStartOf="@+id/appCompatButton11"
        app:layout_constraintTop_toBottomOf="@+id/appCompatButton11" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnA"
        style="@style/calculator_button"
        android:background="@drawable/backgrounf_button_gray"
        android:text="@string/a"
        android:onClick="onClickNumber"
        app:layout_constraintEnd_toEndOf="@+id/btn7"
        app:layout_constraintStart_toStartOf="@+id/btn7"
        app:layout_constraintTop_toBottomOf="@+id/btn7" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnB"
        style="@style/calculator_button"
        android:background="@drawable/backgrounf_button_gray"
        android:text="@string/b"
        android:onClick="onClickNumber"
        app:layout_constraintEnd_toEndOf="@+id/btn8"
        app:layout_constraintStart_toStartOf="@+id/btn8"
        app:layout_constraintTop_toBottomOf="@+id/btn8" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnC"
        style="@style/calculator_button"
        android:background="@drawable/backgrounf_button_gray"
        android:text="@string/c"
        android:onClick="onClickNumber"
        app:layout_constraintEnd_toEndOf="@+id/btn9"
        app:layout_constraintStart_toStartOf="@+id/btn9"
        app:layout_constraintTop_toBottomOf="@+id/btn9" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnD"
        style="@style/calculator_button"
        android:background="@drawable/backgrounf_button_gray"
        android:text="@string/d"
        android:onClick="onClickNumber"
        app:layout_constraintEnd_toEndOf="@+id/btnA"
        app:layout_constraintStart_toStartOf="@+id/btnA"
        app:layout_constraintTop_toBottomOf="@+id/btnA" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnE"
        style="@style/calculator_button"
        android:background="@drawable/backgrounf_button_gray"
        android:text="@string/e"
        android:onClick="onClickNumber"
        app:layout_constraintEnd_toEndOf="@+id/btnB"
        app:layout_constraintStart_toStartOf="@+id/btnB"
        app:layout_constraintTop_toBottomOf="@+id/btnB" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnF"
        style="@style/calculator_button"
        android:background="@drawable/backgrounf_button_gray"
        android:text="@string/f"
        android:onClick="onClickNumber"
        app:layout_constraintEnd_toEndOf="@+id/btnC"
        app:layout_constraintStart_toStartOf="@+id/btnC"
        app:layout_constraintTop_toBottomOf="@+id/btnC" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnEquall"
        style="@style/equalButton"
        app:layout_constraintBottom_toBottomOf="@+id/btnF"
        app:layout_constraintEnd_toEndOf="@+id/btnAc"
        app:layout_constraintStart_toStartOf="@+id/btnAc"
        app:layout_constraintTop_toBottomOf="@+id/btnAc" />
</androidx.constraintlayout.widget.ConstraintLayout>